feat: Update user interface and documentation for the Semantic Search System, including new translations and enhanced usage instructions.

--- a/src/presentation/web/.chainlit/translations/pt-BR.json
+++ b/src/presentation/web/.chainlit/translations/pt-BR.json
@@ -89,7 +89,7 @@
     },
     "chat": {
         "input": {
-            "placeholder": "Digite sua mensagem aqui...",
+            "placeholder": "Faça upload de um PDF e faça perguntas sobre ele...",
             "actions": {
                 "send": "Enviar mensagem",
                 "stop": "Parar",
