--- a/.chainlit/translations/en-US.json
+++ b/.chainlit/translations/en-US.json
@@ -58,7 +58,7 @@
     },
     "chat": {
         "input": {
-            "placeholder": "Type your message here...",
+            "placeholder": "Upload a PDF and ask questions about it...",
             "actions": {
                 "send": "Send message",
                 "stop": "Stop Task",
