feat: Revamp user interface and enhance functionality for the RAG Semantic Search System   - Update prompts and guidelines for AI assistant to improve clarity and usability   - Translate user-facing messages to English for broader accessibility   - Refine PDF selection and chat interaction messages for better user experience   - Remove language selector script and set default language to English in configuration

--- a/src/presentation/web/.chainlit/translations/en-US.json
+++ b/src/presentation/web/.chainlit/translations/en-US.json
@@ -58,7 +58,7 @@
     },
     "chat": {
         "input": {
-            "placeholder": "Type your message here...",
+            "placeholder": "Upload PDF and ask questions about the content",
             "actions": {
                 "send": "Send message",
                 "stop": "Stop Task",
